# AndroidThreadTest

./: CMakeLists.txt  README.md
analysis/: plot_comparison.py  run_all.sh
android/: CMakeLists.txt  build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/threadtest/: DashboardActivity.kt  NativeBench.kt
android/app/src/main/jni/: jni_bridge.c  jni_bridge.cpp  native_bench.c  native_bench_api.h  native_bench_main.cpp
android/app/src/main/res/layout/: activity_dashboard.xml
android/gradle/wrapper/: gradle-wrapper.properties
shared/: bench_core.cpp  bench_core.h
windows/: CMakeLists.txt
windows/src/: native_bench.c  native_bench.cpp
